Fixing view mode for Super User

--- a/src/main/resources/static/folders.html
+++ b/src/main/resources/static/folders.html
@@ -29,7 +29,7 @@
 		<div class="nav-item" onclick="location.href='correspondance.html'">Correspondence</div>
 		<div class="nav-item" onclick="location.href='document.html'">Documents</div>
 		<div class="nav-item active" onclick="location.href='folders.html'">Folders</div>
-		<div class="nav-item" onclick="location.href='filters_form.html'">Filter
+		<div class="nav-item" id="navFilterForm" onclick="location.href='filters_form.html'">Filter
 			Form</div>
 	</nav>
 
