--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -41,7 +41,7 @@
 				onclick="location.href='correspondance.html'">Correspondence</div>
 			<div class="nav-item" onclick="location.href='document.html'">Documents</div>
 			<div class="nav-item" onclick="location.href='folders.html'">Folders</div>
-			<div class="nav-item" onclick="location.href='filters_form.html'">Filter
+			<div class="nav-item" id="navFilterForm" onclick="location.href='filters_form.html'">Filter
 				Form</div>
 		</nav>
 
