--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -313,7 +313,7 @@
 				<div class="form-group">
 					<input type="hidden" id="sendDocumentId" name="sendDocumentId" />
 					<input type="hidden" id="sendDocId" name="sendDocId" /> <label
-						for="sendTo">To: *</label> <input type="text" id="sendTo"
+						for="sendTo">To: *</label> <input type="email" id="sendTo"
 						placeholder="Enter recipient email"> <input type="hidden"
 						id="sendToUserId" name="sendToUserId" />
 					<div class="error-message">This field is required</div>
