Adding validation on correspondance

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -297,7 +297,7 @@
 					<div class="form-section">
 						<div class="form-row">
 							<div class="form-group">
-								<label for="category">Category:</label> <select id="category"
+								<label for="category">Category: *</label> <select id="category"
 									name="category">
 									<option value="">Select Category</option>
 									<option value="Contract">Contract</option>
@@ -310,13 +310,13 @@
 						</div>
 						<div class="form-row">
 							<div class="form-group">
-								<label for="projectName">Project Name:</label> <select
+								<label for="projectName">Project Name: *</label> <select
 									id="projectName" name="projectName">
 									<option value="">Loading projects...</option>
 								</select>
 							</div>
 							<div class="form-group">
-								<label for="contractName">Contract Name:</label> <select
+								<label for="contractName">Contract Name: *</label> <select
 									id="contractName" name="contractName">
 									<option value="">Loading contracts...</option>
 								</select>
@@ -324,11 +324,11 @@
 						</div>
 						<div class="form-row">
 							<div class="form-group">
-								<label for="letterNo">Letter Number:</label> <input type="text"
+								<label for="letterNo">Letter Number: *</label> <input type="text"
 									id="letterNo" name="letterNo" placeholder="Enter letter number">
 							</div>
 							<div class="form-group">
-								<label for="letterDate">Letter Date:</label> <input type="date"
+								<label for="letterDate">Letter Date: *</label> <input type="date"
 									id="letterDate" name="letterDate">
 							</div>
 						</div>
@@ -336,7 +336,7 @@
 						<div class="form-row">
 
 							<div class="form-group">
-								<label for="toField">To:</label> <input type="text" id="toField"
+								<label for="toField">To: *</label> <input type="email" id="toField"
 									name="toField" placeholder="Enter recipient"> <input
 									type="hidden" id="toEmails" name="toEmails">
 							</div>
@@ -361,7 +361,7 @@
 
 						<div class="form-row">
 							<div class="form-group">
-								<label for="referenceLetters">Reference Letters:</label> <select
+								<label for="referenceLetters">Reference Letters: *</label> <select
 									id="referenceLetters" name="referenceLetters"
 									class="form-control" multiple="multiple">
 									<!-- Options will be populated by AJAX -->
@@ -371,7 +371,7 @@
 
 						<div class="form-row">
 							<div class="form-group">
-								<label for="subject">Subject:</label>
+								<label for="subject">Subject: *</label>
 								<textarea id="subject" name="subject"
 									placeholder="Enter subject"></textarea>
 							</div>
@@ -387,7 +387,7 @@
 
 						<div class="form-row">
 							<div class="form-group">
-								<label for="requiredResponse">Required Response:</label> <select
+								<label for="requiredResponse">Required Response: *</label> <select
 									id="requiredResponse" name="requiredResponse">
 									<option value="">Select Response Type</option>
 									<option value="Yes">Yes</option>
@@ -396,14 +396,14 @@
 								</select>
 							</div>
 							<div class="form-group">
-								<label for="dueDate">Due Date:</label> <input type="date"
+								<label for="dueDate">Due Date: *</label> <input type="date"
 									id="dueDate" name="dueDate">
 							</div>
 						</div>
 
 						<div class="form-row">
 							<div class="form-group">
-								<label for="currentStatus">Current Status:</label> <select
+								<label for="currentStatus">Current Status: *</label> <select
 									id="currentStatus" name="currentStatus">
 									<option value="">Loading statuses...</option>
 								</select>
@@ -412,14 +412,14 @@
 
 						<div class="form-row">
 							<div class="form-group">
-								<label for="department">Department:</label> <select
+								<label for="department">Department: *</label> <select
 									id="department" name="department">
 									<option value="">Loading departments...</option>
 								</select>
 							</div>
 						</div>
 						<div class="form-section">
-							<label>Add Attachments:</label>
+							<label>Add Attachments: *</label>
 							<div class="attachments-section">
 								<div id="attachmentsList">
 									<!-- Attachments will be dynamically added here -->
