Fixing update screen with validations

--- a/src/main/resources/static/document.html
+++ b/src/main/resources/static/document.html
@@ -395,7 +395,7 @@
 					</div>
 
 					<div class="form-group">
-						<label for="updateRevisionNo">Revision No:</label> <input
+						<label for="updateRevisionNo">Revision No*:</label> <input
 							type="text" id="updateRevisionNo"
 							placeholder="Enter revision number">
 					</div>
@@ -466,7 +466,7 @@
 					</div>
 
 					<div class="form-group">
-						<label for="updateDocumentFile">Upload New Version:</label> <input
+						<label for="updateDocumentFile">Upload New Version*:</label> <input
 							type="file" id="updateDocumentFile">
 					</div>
 
