Fixing reference letter and port

--- a/src/main/resources/static/correspondance.html
+++ b/src/main/resources/static/correspondance.html
@@ -361,7 +361,7 @@
 
 						<div class="form-row">
 							<div class="form-group">
-								<label for="referenceLetters">Reference Letters: *</label> <select
+								<label for="referenceLetters">Reference Letters: </label> <select
 									id="referenceLetters" name="referenceLetters"
 									class="form-control" multiple="multiple">
 									<!-- Options will be populated by AJAX -->
